--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.url=jdbc:mysql://iedevdb.cju8h0qbqt75.ap-south-1.rds.amazonaws.com:3306/java_trainees_2022
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username=IEPL0801
+spring.datasource.password=IEPL!@321#
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql: true
+spring.thymeleaf.suffix=.html
